move standard functions to utili file

--- a/cleaning_round_2_final.ipynb
+++ b/cleaning_round_2_final.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "import pandas as pd\n",
     "from sklearn.preprocessing import OrdinalEncoder\n",
-    "import random"
+    "from utility_functions import random_imputation"
    ],
    "metadata": {
     "collapsed": false,
@@ -209,31 +209,7 @@
    "outputs": [],
    "source": [
     "pd.set_option('display.max_columns', None)\n",
-    "df_cleaned_missing[df_cleaned_missing[['inwtm']].isnull().any(axis=1)]"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "# define random imputation function\n",
-    "def random_imputation(df):\n",
-    "\n",
-    "    df_imp = df.copy()\n",
-    "    for c in df_imp.columns:\n",
-    "        data = df_imp[c]\n",
-    "        mask = data.isnull()\n",
-    "        imputations = random.choices(data[~mask].values, k = mask.sum())\n",
-    "        data[mask] = imputations\n",
-    "\n",
-    "        return df_imp\n"
+    "df_cleaned_missing[df_cleaned_missing[['inwtm']].isnull().any(axis=1)]\n"
    ],
    "metadata": {
     "collapsed": false,
