go through warnings, remove unnecessary files

--- a/cleaning_round_2_final.ipynb
+++ b/cleaning_round_2_final.ipynb
@@ -135,7 +135,7 @@
    "outputs": [],
    "source": [
     "# ID number has identical values, but this does not look informative and hence is removed\n",
-    "df_cleaned_missing[df_cleaned_missing['idno'] == 1304]\n",
+    "print(df_cleaned_missing[df_cleaned_missing['idno'] == 1304])\n",
     "\n",
     "# remove idno column from data\n",
     "df_cleaned_missing = df_cleaned_missing.drop(columns=['idno'])"
