--- a/data_preprocessing_EDA.ipynb
+++ b/data_preprocessing_EDA.ipynb
@@ -2029,7 +2029,7 @@
     "ax = sns.histplot(data=missing_info_asc, x='percentage missing',\n",
     "             stat='count', bins=20,\n",
     "             color='#446e9b')\n",
-    "ax.set(xlabel='Percentage missing');\n",
+    "ax.set(xlabel='Percentage missing')\n",
     "\n",
     "fig = ax.get_figure()\n",
     "fig.savefig('figures/countplot_missingness.png', dpi=300, bbox_inches='tight')"
@@ -2081,7 +2081,7 @@
    "outputs": [],
    "source": [
     "# histograms of all features in cleaned data\n",
-    "data.hist(figsize=(256,320), bins=50, xlabelsize=12, ylabelsize=12);\n",
+    "data.hist(figsize=(256,320), bins=50, xlabelsize=12, ylabelsize=12)\n",
     "plt.savefig('figures/clean_data_hist', dpi=200, bbox_inches='tight')"
    ],
    "metadata": {
