--- a/final_analysis.ipynb
+++ b/final_analysis.ipynb
@@ -8,13 +8,10 @@
    },
    "outputs": [],
    "source": [
-    "from sklearn.datasets import fetch_california_housing\n",
     "from matplotlib import pyplot as plt\n",
     "import seaborn as sns\n",
-    "import numpy as np # linear algebra\n",
-    "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
-    "import glob\n",
-    "import os\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "sns.set()\n",
     "\n",
     "# Comment this if the data visualisations doesn't work on your side\n",
@@ -22,77 +19,6 @@
     "\n",
     "plt.style.use('bmh')"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "## Analysis of specific targets (WIP) -- currently old code"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 143,
-   "outputs": [],
-   "source": [
-    "# data1 = pd.read_csv('feature importance/ft_importancesSHAP_RF_rfgbfml.csv', low_memory=False)\n",
-    "# data2 = pd.read_csv('feature importance/ft_importancesSHAP_RF_rfgfrpc.csv', low_memory=False)\n",
-    "#\n",
-    "# data1.rename(columns={'Unnamed: 0':'feature'}, inplace=True)\n",
-    "# data2.rename(columns={'Unnamed: 0':'feature'}, inplace=True)\n",
-    "\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 144,
-   "outputs": [],
-   "source": [
-    "# fig, ax = plt.subplots(figsize=(6, 15))\n",
-    "# fig.subplots_adjust(top=0.95)\n",
-    "# sns.set_color_codes(\"pastel\")\n",
-    "# sns.barplot(x='0', y='feature', data=data1)\n",
-    "# fig.suptitle(\"Feature importance of data with 'refugees bringing close family' feature as target\", fontsize=12)\n",
-    "# ax.set_xlabel('SHAP feature importance')\n",
-    "# plt.savefig('figures/example1_barplotfeatimp.png', bbox_inches='tight', dpi=300);"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 145,
-   "outputs": [],
-   "source": [
-    "# fig, ax = plt.subplots(figsize=(6, 15))\n",
-    "# fig.subplots_adjust(top=0.95)\n",
-    "# sns.set_color_codes(\"pastel\")\n",
-    "# sns.barplot(x='0', y='feature', data=data2)\n",
-    "# fig.suptitle(\"Feature importance of data with 'refugees fear' feature as target\", fontsize=12)\n",
-    "# ax.set_xlabel('SHAP feature importance')\n",
-    "# plt.savefig('figures/example2_barplotfeatimp.png', bbox_inches='tight', dpi=300);"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
   },
   {
    "cell_type": "markdown",
@@ -135,30 +61,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
-   "outputs": [],
-   "source": [
-    "# # targets\n",
-    "# data3 = pd.read_csv('ESS8 data/ESS8_subset_cleaned_timeadj_wmissingvals.csv', low_memory=False)\n",
-    "# # make df with missingness percentage of features with missingness\n",
-    "# missing_cols = data3.columns[data3.isnull().any()].to_list()\n",
-    "# percent_missing = data3[missing_cols].isnull().sum() * 100 / len(data3)\n",
-    "# missing_info = pd.DataFrame({'column name':missing_cols,\n",
-    "#                              'percentage missing':percent_missing})\n",
-    "#\n",
-    "# # extract rows with > 5% missing (75 features)\n",
-    "# many_missing = missing_info[missing_info['percentage missing'] > 5]\n",
-    "# targets = many_missing['column name'].tolist()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
    "execution_count": 148,
    "outputs": [
     {
@@ -186,6 +88,7 @@
     "df_perf_RF_plt = df_perf_RF.drop('average', axis=1).T\n",
     "df_perf_RF_plt.columns = df_perf_RF_plt.iloc[0]\n",
     "df_perf_RF_plt = df_perf_RF_plt.drop(df_perf_RF_plt.index[0])\n",
+    "\n",
     "print(df_perf_RF_plt)"
    ],
    "metadata": {
@@ -1117,7 +1020,7 @@
     "             color='#446e9b')\n",
     "\n",
     "plt.xticks(rotation=90)\n",
-    "ax.set(xlabel='Target');\n",
+    "ax.set(xlabel='Target')\n",
     "\n",
     "fig = ax.get_figure()\n",
     "fig.savefig('figures/barplot_missingness_commontargs.png', dpi=300, bbox_inches='tight')"
@@ -5348,7 +5251,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Qualitative assessment stuff"
+    "## Qualitative assessment notes"
    ],
    "metadata": {
     "collapsed": false,
